# kilomoco

./: README.md  infos.txt  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
kilomoco/: cli.py  config.py  launcher.py  tui.py  vscode.py
scripts/: lint.sh  setup-dev.sh  test.sh
tests/: test_cli.py  test_config.py  test_launcher.py  test_profiles_yaml.py  test_tui.py  test_vscode.py  test_vscode_detection.py
