[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kilomoco"
version = "0.1.0"
description = "TUI for managing kilo VS Code extension mode configurations"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []
[project.scripts]
kilomoco = "kilomoco.cli:main"