[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kilomoco"
version = "0.1.0"
description = "TUI for managing kilo VS Code extension mode configurations"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "PyYAML>=6.0",
    "textual>=0.70.0",
    "psutil>=5.9.0"
]
[project.scripts]
kilomoco = "kilomoco.cli:main"